# VS2022-Corrupted-PDB-bug

./: .gitignore  CMakeLists.txt  README.md  lib_initial.cpp  lib_initial.h  lib_updated.cpp  lib_updated.h  module_initial.cpp  module_updated.cpp  repro_cmake.cmd
